# mozilla-releng-_-winsign

./: .readthedocs.yml  HISTORY.rst  README.rst  pyproject.toml  tox.ini
.github/workflows/: pypi-publish.yml
src/winsign/: asn1.py  cli.py  crypto.py  makemsix.py  osslsigncode.py  pefile.py  sign.py  timestamp.py  verify.py
taskcluster/docker/tox/: Dockerfile
taskcluster/kinds/docker-image/: kind.yml
taskcluster/kinds/tox/: kind.yml
tests/: common.py  conftest.py  test_osslsigncode.py  test_sign.py
