[project]
name = "winsign"
version = "2.3.0"
description = "Utilities to support code signing Windows executable files"
authors = [
    { name = "Mozilla Release Engineering", email = "releng@mozilla.com" },
]
readme = "README.rst"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp",
    "construct",
    "cryptography >= 39",
    "pyasn1",
    "pyasn1_modules >= 0.2.6",
    "rsa",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-localserver",
    "pytest-random-order",
    "tox-uv",
]
docs = [
    "sphinx",
]
check = [
    "ruff",
]
coverage = [
    "coverage",
]

[tool.uv.dependency-groups]
docs = {requires-python = ">=3.12"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "taskcluster",
    ".readthedocs.yml",
    ".taskcluster.yml",
    "CODE_OF_CONDUCT.md",
    "docs",
    "mypi.ini",
    ".github",
]

[tool.distutils.bdist_wheel]
universal = true

[project.scripts]
winsign = "winsign.cli:main"

[tool.ruff]
target-version = "py311"
exclude = [".venv", ".tox"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "A",
    "C4",
    "D",
    "I",
    "G",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 200

[tool.ruff.lint.pydocstyle]
convention = "google"
